<resources>
    <string name="app_name">Data Structures in Java</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="linkedlist">Linked List</string>
    <string name="stack">Stacks</string>
    <string name="queue">Queues</string>
    <string name="tree">Trees</string>
    <string name="graphs">Graphs</string>
    <string name="searching">Searching</string>
    <string name="sorting">Sorting</string>
    <string name="faq">Interview questions</string>

    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="nv_all_categories">All Categories</string>
    <string name="nv_app_title">App</string>
    <string name="settings">Settings</string>
    <string name="support_and_feedback">Support / Feedback</string>
    <string name="rate_us">Rate This App</string>

    <string name="username">Saurabh Khare</string>


    <string name="dialog_title_feedback">Contact us</string>
    <string name="dialog_message_feedback">What can we improve? Your feedback is always welcome.</string>
    <string name="later">Later</string>
    <string name="feedback">Feedback</string>


    <string name="dialog_title_rate_this_app">Awesome ;)</string>
    <string name="dialog_message_rate_this_app"><![CDATA[Glad to see you like this app. If you\'re up for it, we would really appreciate you rating & reviewing us.]]></string>
    <string name="google_play">GOOGLE PLAY</string>

    <string name="question_card_title">Question Card</string>

    <string name="stub_question">Question Text</string>
    <string name="stub_answer">Answer Text</string>

    <string name="share_using">Share using</string>

    <string name="app_name_with_index">PdfRendererBasic (%1$d/%2$d)</string>
</resources>
